24. Matrix multiplication with tensors part 3

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxvfZZ4KG8BtxEzFhcmw83"
+      "authorship_tag": "ABX9TyNVnUNPBoSJi1ZH0Kj/CsBO",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/prasann25/colab/blob/main/00_TensorflowFundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -1840,11 +1851,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Wze7K3rgpXM",
-        "outputId": "1c165396-bae2-432b-fc60-6ae3c43e745b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8Wze7K3rgpXM",
+        "outputId": "1c165396-bae2-432b-fc60-6ae3c43e745b"
       },
       "source": [
         "# Let's change the shape of Y\n",
@@ -1873,11 +1884,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DSq_kDwehA0V",
-        "outputId": "8d4796c2-a73d-4b60-d756-c83ef03db8fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DSq_kDwehA0V",
+        "outputId": "8d4796c2-a73d-4b60-d756-c83ef03db8fd"
       },
       "source": [
         "X.shape, tf.reshape(Y, shape=(2, 3)).shape"
@@ -1913,11 +1924,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "chukwVzUrJ6d",
-        "outputId": "4e176c5f-de95-44db-c712-79003f448d04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "chukwVzUrJ6d",
+        "outputId": "4e176c5f-de95-44db-c712-79003f448d04"
       },
       "source": [
         "# Try to matrix multiply by reshaped Y\n",
@@ -1945,11 +1956,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ljMA4EpQrkag",
-        "outputId": "e53d2dac-ae82-4864-a75c-24729899cb29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ljMA4EpQrkag",
+        "outputId": "e53d2dac-ae82-4864-a75c-24729899cb29"
       },
       "source": [
         "tf.reshape(X, shape=(2, 3)).shape, Y.shape"
@@ -1973,11 +1984,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oGvt_O4irTd2",
-        "outputId": "bfed2941-ac12-40dc-d53f-7bdff791c68c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oGvt_O4irTd2",
+        "outputId": "bfed2941-ac12-40dc-d53f-7bdff791c68c"
       },
       "source": [
         "tf.matmul(tf.reshape(X, shape=(2, 3)), Y)"
@@ -2003,11 +2014,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pjct-yAOrzJG",
-        "outputId": "f5de3c03-40f0-426c-f224-cfc0c661b735",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Pjct-yAOrzJG",
+        "outputId": "f5de3c03-40f0-426c-f224-cfc0c661b735"
       },
       "source": [
         "# Can do the same with transpose\n",
@@ -2037,11 +2048,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MH4wftdMsSvr",
-        "outputId": "eb03ddea-d325-436a-c3b7-0377dbb0fabe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MH4wftdMsSvr",
+        "outputId": "eb03ddea-d325-436a-c3b7-0377dbb0fabe"
       },
       "source": [
         "# try MM with transpose rather than reshape\n",
@@ -2083,8 +2094,241 @@
         "id": "3pKJUu_DdlOW"
       },
       "source": [
-        ""
+        "**The dot product**\n",
+        "Matrix multiplication is also referred as dot product.\n",
+        "\n",
+        "You can perform matrix multiplication using :\n",
+        "\n",
+        "*   tf.matmul()\n",
+        "*   tf.tensordot()\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H21Y5QSbzdj9",
+        "outputId": "e956475c-6aa5-4593-9239-d6f43fd2bc9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X, Y"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              " array([[1, 2],\n",
+              "        [3, 4],\n",
+              "        [5, 6]], dtype=int32)>, <tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+              " array([[ 7,  8],\n",
+              "        [ 9, 10],\n",
+              "        [11, 12]], dtype=int32)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pm9ltfTYzf17",
+        "outputId": "070c40b2-591b-4511-9222-b0ebcf814904",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.tensordot(tf.transpose(X), Y, axes = 1)"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[ 89,  98],\n",
+              "       [116, 128]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yA1zLr80zy-U",
+        "outputId": "574912f6-12b5-4e90-ccba-e836d43f4137",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Perform matrix multiplication between X and Y(transposed)\n",
+        "tf.matmul(X, tf.transpose(Y))\n"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+              "array([[ 23,  29,  35],\n",
+              "       [ 53,  67,  81],\n",
+              "       [ 83, 105, 127]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LCSa-Shc0BLi",
+        "outputId": "1065fc6f-3d53-4c15-e8ff-a8f5d4537677",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Perform matrix multiplication between X and Y(transposed)\n",
+        "tf.matmul(X, tf.reshape(Y, shape=(2, 3)))\n"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+              "array([[ 27,  30,  33],\n",
+              "       [ 61,  68,  75],\n",
+              "       [ 95, 106, 117]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y2F9Www90L_l",
+        "outputId": "d94cc5f7-404c-4309-eef9-80d4ac9a4ed4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the value of Y , reshape Y and transposed Y\n",
+        "print(\"Normal Y:\")\n",
+        "print(Y, \"\\n\")\n",
+        "\n",
+        "print(\"Reshaped Y:\")\n",
+        "print(tf.reshape(Y, shape=(2, 3)), \"\\n\")\n",
+        "\n",
+        "print(\"Transposed Y:\")\n",
+        "print(tf.transpose(Y), \"\\n\")\n"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Normal Y:\n",
+            "tf.Tensor(\n",
+            "[[ 7  8]\n",
+            " [ 9 10]\n",
+            " [11 12]], shape=(3, 2), dtype=int32) \n",
+            "\n",
+            "Reshaped Y:\n",
+            "tf.Tensor(\n",
+            "[[ 7  8  9]\n",
+            " [10 11 12]], shape=(2, 3), dtype=int32) \n",
+            "\n",
+            "Transposed Y:\n",
+            "tf.Tensor(\n",
+            "[[ 7  9 11]\n",
+            " [ 8 10 12]], shape=(2, 3), dtype=int32) \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qzz4y_Ls0Tgu",
+        "outputId": "6f76175a-9e06-4813-c05d-2f0216c1dd3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.matmul(X, tf.transpose(Y))"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+              "array([[ 23,  29,  35],\n",
+              "       [ 53,  67,  81],\n",
+              "       [ 83, 105, 127]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PqxbR5xk1Tfh"
+      },
+      "source": [
+        "#### Generally , when performing multiplication on two tensors, and one of the axes doesn't line up, you will transpose (rather than reshape) one of the tensor to satisfy MM rules."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6seVce8g1nco"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
