25. Changing the datatype of tensors

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNVnUNPBoSJi1ZH0Kj/CsBO",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNvTsuT5oj7mL2LVeNnDURj"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/prasann25/colab/blob/main/00_TensorflowFundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -2108,11 +2097,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H21Y5QSbzdj9",
-        "outputId": "e956475c-6aa5-4593-9239-d6f43fd2bc9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "H21Y5QSbzdj9",
+        "outputId": "e956475c-6aa5-4593-9239-d6f43fd2bc9b"
       },
       "source": [
         "X, Y"
@@ -2142,11 +2131,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pm9ltfTYzf17",
-        "outputId": "070c40b2-591b-4511-9222-b0ebcf814904",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pm9ltfTYzf17",
+        "outputId": "070c40b2-591b-4511-9222-b0ebcf814904"
       },
       "source": [
         "tf.tensordot(tf.transpose(X), Y, axes = 1)"
@@ -2172,11 +2161,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yA1zLr80zy-U",
-        "outputId": "574912f6-12b5-4e90-ccba-e836d43f4137",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yA1zLr80zy-U",
+        "outputId": "574912f6-12b5-4e90-ccba-e836d43f4137"
       },
       "source": [
         "# Perform matrix multiplication between X and Y(transposed)\n",
@@ -2204,11 +2193,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LCSa-Shc0BLi",
-        "outputId": "1065fc6f-3d53-4c15-e8ff-a8f5d4537677",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LCSa-Shc0BLi",
+        "outputId": "1065fc6f-3d53-4c15-e8ff-a8f5d4537677"
       },
       "source": [
         "# Perform matrix multiplication between X and Y(transposed)\n",
@@ -2236,11 +2225,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y2F9Www90L_l",
-        "outputId": "d94cc5f7-404c-4309-eef9-80d4ac9a4ed4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Y2F9Www90L_l",
+        "outputId": "d94cc5f7-404c-4309-eef9-80d4ac9a4ed4"
       },
       "source": [
         "# Check the value of Y , reshape Y and transposed Y\n",
@@ -2282,11 +2271,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qzz4y_Ls0Tgu",
-        "outputId": "6f76175a-9e06-4813-c05d-2f0216c1dd3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qzz4y_Ls0Tgu",
+        "outputId": "6f76175a-9e06-4813-c05d-2f0216c1dd3f"
       },
       "source": [
         "tf.matmul(X, tf.transpose(Y))"
@@ -2316,19 +2305,165 @@
         "id": "PqxbR5xk1Tfh"
       },
       "source": [
-        "#### Generally , when performing multiplication on two tensors, and one of the axes doesn't line up, you will transpose (rather than reshape) one of the tensor to satisfy MM rules."
+        "Generally , when performing multiplication on two tensors, and one of the axes doesn't line up, you will transpose (rather than reshape) one of the tensor to satisfy MM rules."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hd2umS_Z12Ii"
+      },
+      "source": [
+        "### Changing the datatype of a tensor"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6seVce8g1nco"
+        "id": "cyO52NCs16fg",
+        "outputId": "7ef26265-d46a-460b-b0a7-13721b6686ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "B = tf.constant([1.7, 7.4])\n",
+        "B.dtype"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tf.float32"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g-qJ4hr_2QdL",
+        "outputId": "da7c390a-eb14-4f77-838b-e034baf4e093",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "C = tf.constant([1, 7])\n",
+        "C.dtype"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tf.int32"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ug-mlBuC2X3q",
+        "outputId": "093441e0-9f87-41b9-bfc0-573323d87356",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Change from float 32 to float16 (reduced precision)\n",
+        "D = tf.cast(B, dtype = tf.float16)\n",
+        "D"
+      ],
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=float16, numpy=array([1.7, 7.4], dtype=float16)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LIL6A_F83zrD",
+        "outputId": "83c84f16-9afd-473e-ddb3-653edfa2ad23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Change from int32 to float32\n",
+        "\n",
+        "E = tf.cast(C, dtype =tf.float32)\n",
+        "E"
+      ],
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=float32, numpy=array([1., 7.], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y9u4kRLI4Hf5",
+        "outputId": "721aeb51-4bee-4394-d58b-0e3f4beeb9cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "E_float_16 = tf.cast(E, dtype = tf.float16)\n",
+        "E_float_16"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=float16, numpy=array([1., 7.], dtype=float16)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
     }
   ]
 }
